# GoF-Design-Patterns

./: .gitignore
.github/workflows/: build.yml
Structural/Adapter/: CMakeLists.txt
Structural/Adapter/include/: Monster.h  Pet.h  PetAdapterDynamic.h  PetAdapterStatic.h
Structural/Adapter/src/: Monster.cpp  Pet.cpp  PetAdapterDynamic.cpp  main.cpp
Structural/Adapter/tests/: test_adapters.cpp
